fix login - now in body
